# Todo-Full-Stack-Web-Application

./: .env.example  .eslintrc.json  .gitignore  COHERE_IMPLEMENTATION_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  FINAL_SUMMARY.md  FULL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  backend_main.py  backend_requirements.txt  build.py  build_and_run_docker.bat  build_and_run_docker.sh  chat_test.py  config.py  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.full.yml  docker-compose.yml  docker_requirements.txt  jest.config.js  mcp_models.py  mcp_tools.py  mcp_tools_full.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_backend.py  run_server.py  simple_verify.py  start_docker.bat  start_docker.sh  (+4 more)
